--- a/main.css
+++ b/main.css
@@ -1,10 +1,35 @@
 html {
   font-family: sans-serif;
   font-size: 18px;
-  height: 100%;
+  /* height: 100%; */
 }
 
 body {
   margin: 0;
-  height: 100%;
+  /* height: 100%; */
 }
+@import url(https://fonts.googleapis.com/css?family=Gloria+Hallelujah);
+
+
+
+#create  {
+  /* float:left; */
+  padding:25px 25px 40px;
+  margin:1rem;
+  width:200px;
+  height:200px;
+}
+
+#create {
+  user-select:none;
+  padding:20px;
+  border-radius:20px;
+  text-align:center;
+  border:15px solid rgba(0,0,0,0.1);
+  cursor:pointer;
+  color:rgba(0,0,0,0.1);
+  font:220px "Helvetica", sans-serif;
+  line-height:185px;
+}
+
+#create:hover { border-color:rgba(0,0,0,0.2); color:rgba(0,0,0,0.2); }
